Labatt POCM Deployment to UAT 09.16.2016/objects/Annual_Brand_Area_Budget_Plan__c.object
<CustomObject>
    <description>This custom object is used for POC Planning (Slalom Aug 2016)</description>
    <fields>
        <fullName>Annual_Area_Budget__c</fullName>
        <label>Annual Area Budget</label>
        <referenceTo>Annual_Area_Budget__c</referenceTo>
        <relationshipLabel>Annual Brand Area Budget Plans</relationshipLabel>
        <relationshipName>Annual_Brand_Budget_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Brand_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Brand Budget</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Brand_Spend__c</fullName>
        <formula>Discretionary_Spend__c +  Driver_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Annual Brand Area Budget Plans</relationshipLabel>
        <relationshipName>Annual_Brand_Budget_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Year__c</fullName>
        <formula>Annual_Area_Budget__r.Budget_Year__c</formula>
        <label>Budget Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discretionary_Overage__c</fullName>
        <label>Discretionary Overage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discretionary_Spend__c</fullName>
        <label>Discretionary Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Driver_Overage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Driver Overage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Driver_Spend__c</fullName>
        <label>Driver Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Annual Brand Area Budget Plan</label>
    <nameField>
        <displayFormat>ABABP-{0000}</displayFormat>
        <label>Annual Brand Area Budget Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annual Brand Area Budget Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>